--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body {
     overflow: hidden;
 }
 
+.navigation.active{
+    width: 80px;
+}
+
 .navigation ul {
     position: absolute;
     top: 0;
@@ -159,6 +163,11 @@ body {
     transition: 0.5s;
 }
 
+.main.active{
+    width: calc(100% - 80px);
+    left: 80px;
+}
+
 .topbar {
     width: 100%;
     height: 60px;
@@ -213,4 +222,22 @@ body {
     left: 10px;
     font-size: 1.2em;
     cursor: pointer;
+}
+
+.user{ /*TODO solve this bug */
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.user img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
