--- a/style.css
+++ b/style.css
@@ -168,6 +168,8 @@ body {
     left: 80px;
 }
 
+/* topbar */
+
 .topbar {
     width: 100%;
     height: 60px;
@@ -241,3 +243,57 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+/* cards */
+
+.cardBox{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    color: var(--text-primary);
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 30px;
+}
+
+.cardBox .card{
+    position: relative;
+    background: var(--bg-light);
+    padding: 30px;
+    border-radius: 16px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+   /* box-shadow: 0 7px 25px rgba(0,0,0,0.08);*/ /*TODO check design system*/
+}
+
+.cardBox .card .numbers{
+    position: relative;
+    font-weight: 700;
+    font-size: 2.5em;
+}
+
+.cardBox .card .cardName{
+    color: var(--text-secondary);
+    font-size: 1.1em;
+    font-weight: 700;
+    margin-top: 5px;
+}
+
+.cardBox .card .iconBx{
+    color: var(--orange);
+    font-size: 3em; /* was 3.5 */
+}
+
+.cardBox .card:hover .numbers{
+ color: var(--text-secondary);
+}
+
+.cardBox .card:hover .cardName{
+    color: var(--orange);
+}
+
+.cardBox .card:hover .iconBx{
+    color: var(--text-primary);
+}
+
