--- a/style.css
+++ b/style.css
@@ -311,6 +311,28 @@ body {
 }
 
 
+/* charts */
+.graphBox{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 30px;
+    min-height: 200px;
+}
+
+.graphBox .box{
+    position: relative;
+    background: var(--bg-light);
+    padding: 20px;
+    width: 100%;
+    border-radius: 16px;
+    color: var(--text-primary);
+    font-family: 'Cormorant Infant', serif;
+}
+
+
 /* details */
 .details {
     position: relative;
@@ -485,6 +507,11 @@ body {
 /*           --- RESPONSIVE ---           */
 
 @media (max-width:991px) {
+
+    .graphBox{
+        grid-template-columns: 1fr;
+        height: auto;
+    }
 
     .navigation {
         left: -300px;
