--- a/style.css
+++ b/style.css
@@ -161,11 +161,13 @@ body {
     background: transparent;
     /* TODO change this to --bg-light if needed */
     transition: 0.5s;
+    max-width: 99vw;
 }
 
 .main.active {
     width: calc(100% - 80px);
     left: 80px;
+    max-width: 100vw;
 }
 
 /* topbar */
